# paper-to-skill

./: .gitignore  Dockerfile  README.md  SKILL.md  dummy_paper_fixed.txt  dummy_paper_flawed.txt  evaluation_runner.py  fa3_harness.py  flashattention3.md  generated_fa3_skill.py  generated_harness.py  generated_skill.py  pyproject.toml  run_harness_test.py  sageattention2_raw.txt  test_engineer_agent.py  test_oom.py  test_phase0.py  test_phase2.py  test_real_paper.py
driver_libs/: libcuda.so.1  libnvidia-allocator.so.1  libnvidia-allocator.so.595.58.03  libnvidia-ml.so.1  libnvidia-ml.so.595.58.03  libnvidia-ptxjitcompiler.so.1
evals/: SKILL.md  execute_fa3_pipeline.py  execute_sage2_pipeline.py  fa3_runner.py  generated_sage2_skill.py  sage2_harness.py  sage2_runner.py  validate_skill_md.py
skills/sageattention-2/: SKILL.md
src/paper_to_skill/: __main__.py
src/paper_to_skill.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/paper_to_skill/agents/: chunker.py  parser_agent.py  synthesizer_agent.py  v2_synthesizer.py
src/paper_to_skill/core/: __init__.py  direct_executor.py  hardware_matrix.py  orchestrator.py  restricted_sandbox.py  supervisor_agent.py
tests/: test_phase1.py  test_phase3.py  test_phase4.py
